<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalNote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="back">Back</string>
	<string name="title">Title</string>
	<string name="edit">Edit</string>
	<string name="text">文字</string>
	<string name="photo">照片</string>
	<string name="sounds">语音</string>
	<string name="movie">视频</string>
	<string name="gzfgeh">gzfgeh</string>
	<string name="setting">设置</string>
	<string name="other_login">第三方登陆</string>
	<string name="cancle">Cancel</string>
	<string name="get_photo">从相册选择图片</string>
	<string name="make_photo">拍照</string>
	<string name="personal_info">个人信息</string>
	<string name="head_image">头像</string>
	<string name="profession">职业</string>
	<string name="signature">签名</string>
	<string name="nickname">昵称</string>
	<string name="sexual">性别</string>
	<string name="region">地区</string>
	<string name="email_addr">邮箱地址</string>
	<string name="please_select">请选择</string>
	<string name="signature_default">什么都没有留下哦</string>
	<string name="sexual_default">保密</string>
	<string name="change_image">修改头像</string>
	<string name="page_design">页面重构设计</string>
	<string name="exchange_design">交互设计师</string>
	<string name="productor_manager">产品经理</string>
	<string name="ui_design">UI设计师</string>
	<string name="js_design">JS设计师</string>
	<string name="web_design">WEB设计师</string>
	<string name="mobile_design">移动设计师</string>
	<string name="php_design">PHP开发设计师</string>
	<string name="software_test">软件测试工程师</string>
	<string name="linux_design">Linux系统工程师</string>
	<string name="java_design">JAVA工程师</string>
	<string name="student">学生</string>
	<string name="others">其他</string>
	<string name="ok">OK</string>
	<string name="say_something">说点什么吧！</string>
	<string name="man">男</string>
	<string name="woman">女</string>
	<string name="province">省份</string>
	<string name="city">市/区</string>
	<string name="county">区/县</string>
	<string name="login_with_sina_weibo">用新浪微博登录</string>
	<string name="login_with_msg">用手机号码登录</string>
	<string name="login_with_qq">用QQ登录</string>
	<string name="quit">退出</string>
	
</resources>
