<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/title_bg">
    
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:layout_margin="2dp"
	    android:id="@+id/left_btn"
	    android:text="@string/back"
	    android:textColor="@color/title_btn_text_color"/>
	
	<TextView 
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:id="@+id/title_text"
	    android:text="@string/title"
	    android:textColor="@color/title_btn_text_color"
	    android:textSize="24sp"/>
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:layout_margin="2dp"
	    android:id="@+id/right_btn"
	    android:text="@string/edit"
	    android:textColor="@color/title_btn_text_color"/>
	
</LinearLayout>
