<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:layout_alignParentBottom="true"
	    android:layout_margin="10dp"
	    android:id="@+id/transparent_cancle"
	    android:background="#FFFFFF">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancle"
	        android:layout_centerInParent="true"
	        android:textColor="@color/title_bg"
	        android:textSize="20sp"/>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_above="@id/transparent_cancle"
	    android:id="@+id/get_photo"
	    android:background="#FFFFFF">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/get_photo"
	        android:layout_centerInParent="true"
	        android:textColor="@color/title_bg"
	        android:textSize="20sp"/>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_above="@id/get_photo"
	    android:id="@+id/make_photo"
	    android:background="#FFFFFF">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/make_photo"
	        android:layout_centerInParent="true"
	        android:textColor="@color/title_bg"
	        android:textSize="20sp"/>
	</RelativeLayout>
	
</RelativeLayout>
