<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/main_title"/>
        "
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:orientation="vertical"
	    android:layout_margin="20dp"
	    android:background="@drawable/shape_file">
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1">
	        
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/province"/>
	        
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/city"/>
	        
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/county"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1">
	        
	        <EditText
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/province"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:hint="@string/province"/>
	        
	        <EditText 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/city"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:hint="@string/city"/>
	        
	        <EditText 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:id="@+id/county"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:hint="@string/county"/>
	        
	    </LinearLayout>
	    
	</LinearLayout>
	<!--  
	<com.baidu.mapapi.map.MapView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:id="@+id/map"
	    android:onClick="true"/>
	    
	-->
</LinearLayout>
